--- a/exercicios/json_dict_exercicio.ipynb
+++ b/exercicios/json_dict_exercicio.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Abra o arquivo 'sp_srag.json' e transforma ele em um diccionario. Esse arquivo contem as informações dos casos da SRAG e foi baixado do website do ministerio de saude. O formato original é 'csv'. Depois de cortar algumas informações tranformei em um 'json' para a gente investigar."
+    "Abra o arquivo 'sp_srag.json' e transforma ele em um diccionario. Esse arquivo contem as informações dos casos da SRAG e foi baixado do [website do ministerio de saude](https://covid.saude.gov.br/). O formato original é 'csv'. Depois de cortar algumas informações tranformei em um 'json' para a gente investigar. Nas proximas aulas vamos aprender como trabalhar com os bancos de dados que vai facilitar muito a nossa vida!"
    ]
   },
   {
