--- a/1- Tkinter.ipynb
+++ b/1- Tkinter.ipynb
@@ -147,28 +147,43 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- **Button (Botão):** O widget de botão possui uma propriedade para ativar/desativar. Quando o usuário clica no botão, um evento é acionado no Tkinter. O que vai fazer esse evento? Deperende do que o programador tenha planejado.<br>\n",
-    "Sintax: `button_widget = tkinter.Button(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder (espaço reservado) que pode ter vários valores como a cor do background/foreground, fonte, comando (para chamada de função), imagem, altura e largura do botão. Nos exemplos acima, o texto do `Label` é um exemplo para os argumentos opcionais. \n",
-    "<br>\n",
-    "- **Canvas (Tela):** A tela é usada para desenhar formas em GUI e suporta vários métodos de desenho (se lembra do Paint do Windows?). <br>\n",
-    "    Sintax: `canvas_widget = tkinter.Canvas (window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores, como largura da borda, cor do plano de fundo, altura e largura do widget.\n",
-    "<br>\n",
-    "- **Checkbutton (Botão de verificação):** o botão de verificação registra o estado ativado ou desativado. Permite selecionar mais de uma opção por vez e até deixá-la desmarcada. <br>\n",
-    "Sintax: `checkbutton_widget = tkinter.CheckButton(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores como título, texto, a cor de background/foreground enquanto o widget está sob o cursor , fonte, imagem etc.\n",
-    "<br>\n",
-    "- **Entry (Entrada):** o widget de entrada é usado para criar campos de entrada ou obter texto de entrada do usuário no GUI. <br>\n",
-    "Sintax: `entry_widget = tkinter.Entry(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores, como largura da borda, cor do plano de fundo (background), largura e altura do botão etc.\n",
-    "<br>\n",
-    "- **Text:**\tParecido com o `Entry` mas permite varias linhas de texto.\n",
-    "<br>\n",
-    "- **Frame (Quadro):** O quadro é usado como contêiner no Tkinter para agrupar e organizar adequadamente os widgets. <br>\n",
-    "Sintax: `frame_widget = tkinter.Frame(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores, como largura da borda, altura e largura do widget, a cor de destaque (cor quando widget deve ser focado).\n",
-    "<br>\n",
-    "- **Label (rotulo):** Label é usado para criar widgets de uma única linha, como texto, imagens, etc. <br>\n",
-    "Sintax: `label_widget = tkinter.Label(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um espaço reservado que pode ter vários valores, como a fonte de um rotulo, a cor de fundo, imagem, largura e altura do rotulo."
+    "#### **Button (Botão):** \n",
+    "O widget de botão possui uma propriedade para ativar/desativar. Quando o usuário clica no botão, um evento é acionado no Tkinter. O que vai fazer esse evento? Deperende do que o programador tenha planejado.\n",
+    "\n",
+    "- Sintax: `button_widget = tkinter.Button(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder (espaço reservado) que pode ter vários valores como a cor do background/foreground, fonte, comando (para chamada de função), imagem, altura e largura do botão. Nos exemplos acima, o texto do `Label` é um exemplo para os argumentos opcionais. \n",
+    "\n",
+    "\n",
+    "#### **Canvas (Tela):** \n",
+    "A tela é usada para desenhar formas em GUI e suporta vários métodos de desenho (se lembra do Paint do Windows?).\n",
+    "\n",
+    "- Sintax: `canvas_widget = tkinter.Canvas (window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores, como largura da borda, cor do plano de fundo, altura e largura do widget.\n",
+    "\n",
+    "\n",
+    "####  **Checkbutton (Botão de verificação):** \n",
+    "o botão de verificação registra o estado ativado ou desativado. Permite selecionar mais de uma opção por vez e até deixá-la desmarcada.\n",
+    "\n",
+    "- Sintax: `checkbutton_widget = tkinter.CheckButton(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores como título, texto, a cor de background/foreground enquanto o widget está sob o cursor , fonte, imagem etc.\n",
+    "\n",
+    "#### **Entry (Entrada):** \n",
+    "o widget de entrada é usado para criar campos de entrada ou obter texto de entrada do usuário no GUI. \n",
+    "\n",
+    "- Sintax: `entry_widget = tkinter.Entry(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores, como largura da borda, cor do plano de fundo (background), largura e altura do botão etc.\n",
+    "\n",
+    "#### **Text:**\t\n",
+    "Parecido com o `Entry` mas permite varias linhas de texto.\n",
+    "\n",
+    "#### **Frame (Quadro):** \n",
+    "O quadro é usado como contêiner no Tkinter para agrupar e organizar adequadamente os widgets. \n",
+    "\n",
+    "- Sintax: `frame_widget = tkinter.Frame(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um placeholder que pode ter vários valores, como largura da borda, altura e largura do widget, a cor de destaque (cor quando widget deve ser focado).\n",
+    "\n",
+    "#### **Label (rotulo):** \n",
+    "Label é usado para criar widgets de uma única linha, como texto, imagens, etc. <br>\n",
+    "- Sintax: `label_widget = tkinter.Label(window, option = placeholder)`. O `window` é o argumento para determinar a janela/frame que o widget pertence, enquanto `option` é um espaço reservado que pode ter vários valores, como a fonte de um rotulo, a cor de fundo, imagem, largura e altura do rotulo."
    ]
   },
   {
