--- a/1- Tkinter.ipynb
+++ b/1- Tkinter.ipynb
@@ -201,6 +201,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -211,8 +212,10 @@
     "No total, para esse fim, o Tkinter fornece três classes principais de gerenciador de geometria:\n",
     "- **pack()**: organiza os widgets de maneira em bloco e a largura disponível completa é ocupada por ele. É um método convencional para mostrar os widgets na janela.\n",
     "<br>\n",
+    "\n",
     "- **grid():** organiza os widgets em uma estrutura em forma de tabela. Você aprenderá sobre isso em detalhes posteriormente neste tutorial.\n",
     "<br>\n",
+    "\n",
     "- **place():** O seu objetivo é colocar os widgets em uma posição específica, conforme instruído pelo usuário no widget."
    ]
   },
