--- a/1- Tkinter.ipynb
+++ b/1- Tkinter.ipynb
@@ -211,10 +211,10 @@
     "\n",
     "No total, para esse fim, o Tkinter fornece três classes principais de gerenciador de geometria:\n",
     "- **pack()**: organiza os widgets de maneira em bloco e a largura disponível completa é ocupada por ele. É um método convencional para mostrar os widgets na janela.\n",
-    "<br>\n",
+    "\n",
     "\n",
     "- **grid():** organiza os widgets em uma estrutura em forma de tabela. Você aprenderá sobre isso em detalhes posteriormente neste tutorial.\n",
-    "<br>\n",
+    "\n",
     "\n",
     "- **place():** O seu objetivo é colocar os widgets em uma posição específica, conforme instruído pelo usuário no widget."
    ]
@@ -896,7 +896,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -910,7 +910,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.15"
   },
   "toc": {
    "base_numbering": 1,
@@ -953,6 +953,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "92b1d5f842d7c1e714e1ab666cefb8d1f75311aac337aae0336133957fcbf554"
+   }
   }
  },
  "nbformat": 4,
