correction to App phonebook

--- a/8- App_Phonebook.ipynb
+++ b/8- App_Phonebook.ipynb
@@ -505,20 +505,27 @@
    ],
    "source": [
     "import json\n",
+    "import pathlib\n",
     "\n",
     "\n",
     "def inserir():\n",
     "    name = input('insere o nome: ')\n",
     "    numero = input('insere o numero: ')\n",
     "    #abrimos o arquivo .json para ler e criamos o dicionario \"dic\"\n",
-    "    with open('phonebook.json', 'r+') as file:\n",
-    "        dic = json.load(file)\n",
+    "    file = pathlib.Path('phonebook.json')\n",
+    "    if file.exists():\n",
+    "        with open('phonebook.json', 'r') as file:\n",
+    "            dic = json.load(file)\n",
+    "    else:\n",
+    "        dic = {}\n",
     "                \n",
     "    #adicionamos o contato novo\n",
-    "    dic[name.lower()] = numero\n",
+    "    #dic[name.lower()] = numero\n",
+    "    new_contact = {name.lower(): numero}\n",
+    "    dic.update(new_contact)\n",
     "    \n",
     "    #inserimos o dicionario atualizado no arquivo \"phonebook.json\" \n",
-    "    with open('phonebook.json', 'w+') as file:\n",
+    "    with open('phonebook.json', 'w') as file:\n",
     "        json.dump(dic,file)\n",
     "    \n",
     "\n",
@@ -547,8 +554,7 @@
     "    elif action == 's':\n",
     "        break\n",
     "    else:\n",
-    "        print(\"Não entendi!\")\n",
-    "\n"
+    "        print(\"Não entendi!\")"
    ]
   },
   {
